# cmake_precompiled_header_example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
my_common_lib_folder/: CMakeLists.txt  my_file.cpp  my_file.h  my_infrequently_update_header.h
